--- a/menu-manutencoes.html
+++ b/menu-manutencoes.html
@@ -204,7 +204,7 @@
         <p>Oportunidades</p>
       </a>
 
-      <a href="#" class="card">
+      <a href="Dashboardplanosvigentes.html" class="card">
         <i class="fas fa-clipboard-list"></i>
         <p>Planos Vigentes</p>
       </a>
@@ -345,4 +345,5 @@
 
 </body>
 </html>
+
 
