--- a/Dashboardplanosvigentes.html
+++ b/Dashboardplanosvigentes.html
@@ -417,6 +417,7 @@
 
     <label>Checklist Realizado:</label>
     <div style="display:flex;flex-wrap:wrap;gap:10px;margin-bottom:10px;">
+      <label><input type="checkbox" value="100" /> 100</label>
       <label><input type="checkbox" value="300" /> 300</label>
       <label><input type="checkbox" value="600" /> 600</label>
       <label><input type="checkbox" value="900" /> 900</label>
