--- a/Dashboardplanosvigentes.html
+++ b/Dashboardplanosvigentes.html
@@ -942,6 +942,7 @@ function formatarDataBR(data) {
 
     <label>Checklist Realizado:</label>
     <div style="display:flex;flex-wrap:wrap;gap:10px;margin-bottom:10px;">
+      label><input type="checkbox" class="checklistNovoPlano" value="100" /> 100</label>
       <label><input type="checkbox" class="checklistNovoPlano" value="300" /> 300</label>
       <label><input type="checkbox" class="checklistNovoPlano" value="600" /> 600</label>
       <label><input type="checkbox" class="checklistNovoPlano" value="900" /> 900</label>
