--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -283,7 +283,7 @@
     <div style="display: flex; align-items: center; justify-content: space-between;">
       <img src="assets/logo.png" alt="Logo" class="logo">
     <div style="flex: 1; text-align: center;">
-      <em>Dashboard Agro Divel 360</em>
+      <em>Dashboard Agro Divel 360 - Peças</em>
       <div id="dynamic-title" style="font-style: italic;">Carregando...</div>
     </div>
       <div style="width: 65px;"></div>
@@ -655,3 +655,4 @@ document.getElementById("btn-exportar").addEventListener("click", () => {
 </body>
 
 </html> 
+
