--- a/Dashboardplanosvigentes.html
+++ b/Dashboardplanosvigentes.html
@@ -282,10 +282,10 @@
 
 @keyframes pulsarAlerta {
   from {
-    background-color: #ff9800; /* Laranja padrão */
+    background-color: #950000; /* Laranja padrão */
   }
   to {
-    background-color: #ff9900e0; /* Laranja mais claro */
+    background-color: #c67903; /* Laranja mais claro */
   }
 }
 
